// Copyright (c) 2025 Jonathan Fontanez
// SPDX-License-Identifier: BUSL-1.1

syntax = "proto3";

package streamlib.broker;

// BrokerService provides diagnostics and monitoring for the XPC broker.
// Used by CLI tools to inspect broker state without affecting frame transfer.
service BrokerService {
  // Health check - verify broker is responsive
  rpc GetHealth(GetHealthRequest) returns (GetHealthResponse);

  // Version info - get broker version and build info
  rpc GetVersion(GetVersionRequest) returns (GetVersionResponse);

  // List all registered runtimes
  rpc ListRuntimes(ListRuntimesRequest) returns (ListRuntimesResponse);

  // List processors for a specific runtime
  rpc ListProcessors(ListProcessorsRequest) returns (ListProcessorsResponse);

  // List active XPC connections
  rpc ListConnections(ListConnectionsRequest) returns (ListConnectionsResponse);
}

// Health check
message GetHealthRequest {}

message GetHealthResponse {
  bool healthy = 1;
  string status = 2;  // "ok", "degraded", etc.
  int64 uptime_secs = 3;
}

// Version info
message GetVersionRequest {}

message GetVersionResponse {
  string version = 1;         // e.g., "0.2.4"
  string git_commit = 2;      // Short commit hash if available
  string build_date = 3;      // ISO 8601 date
  uint32 protocol_version = 4; // Bump when gRPC API changes (for compatibility check)
}

// Runtime listing
message ListRuntimesRequest {}

message RuntimeInfo {
  string runtime_id = 1;
  int64 registered_at_unix_ms = 2;
  int32 processor_count = 3;
  int32 connection_count = 4;
}

message ListRuntimesResponse {
  repeated RuntimeInfo runtimes = 1;
}

// Processor listing
message ListProcessorsRequest {
  string runtime_id = 1;  // Empty = all runtimes
}

message ProcessorInfo {
  string runtime_id = 1;
  string processor_id = 2;
  string processor_type = 3;  // e.g., "PythonContinuousProcessor"
  int64 registered_at_unix_ms = 4;
  string bridge_state = 5;  // "connected", "awaiting", "failed"
}

message ListProcessorsResponse {
  repeated ProcessorInfo processors = 1;
}

// Connection listing
message ListConnectionsRequest {
  string runtime_id = 1;  // Empty = all runtimes
}

message ConnectionInfo {
  string connection_id = 1;
  string runtime_id = 2;
  string processor_id = 3;
  string role = 4;  // "runtime" or "subprocess"
  int64 established_at_unix_ms = 5;
  int64 frames_transferred = 6;
  int64 bytes_transferred = 7;
}

message ListConnectionsResponse {
  repeated ConnectionInfo connections = 1;
}
